--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 		<h2 class="text-2xl font-semibold mt-8 mb-4">Varför använda Neovim?</h2>
 		<ul class="list-disc ml-8 space-y-2 text-lg text-gray-800">
-			<li><a href="vimmotions.html">Vim Motions</a></li>
-			<li>Extremt anpassningsbar med Lua-konfiguration. Starta med: <a href="kickstart.html">Neovim
+			<li><a href="vimmotions.html" class="text-blue-400 hover:underline">Vim Motions</a></li>
+			<li>Extremt anpassningsbar med Lua-konfiguration. Starta med: <a href="kickstart.html"
+					class="text-blue-400 hover:underline">Neovim
 					Kickstart</a></li>
 			<li>Stöd för plugins och community-tillägg</li>
-			<li>Funkar i alla terminaler. Se: <a href="terminal.html">Terminaler</a></li>
+			<li>Funkar i alla terminaler. Se: <a href="terminal.html"
+					class="text-blue-400 hover:underline">Terminaler</a></li>
 		</ul>
 
 		<h2 class="text-2xl font-semibold mt-8 mb-4">Hur installerar man Neovim?</h2>
