--- a/vimmotions.html
+++ b/vimmotions.html
@@ -19,7 +19,8 @@
 		<h2 class="text-2xl font-semibold mb-4">Vad är Vim Motions?</h2>
 		<p>Vim-motions är rörelser som låter dig snabbt navigera genom text i Vim och Neovim. De är grunden för
 			att använda Vim effektivt och snabbt. Dessa utförs i normal mode!</p><br>
-		<p class="text-lg">För att förstå modes <a href="modes.html">klicka här!</a>
+		<p class="text-lg">För att förstå modes <a href="modes.html"
+				class="text-blue-400 hover:underline">klicka här!</a>
 
 		<h2 class="text-2xl font-semibold mt-8 mb-4">Grundläggande Rörelser</h2>
 		<ul class="list-disc ml-8 space-y-2">
