--- a/vimmotions.html
+++ b/vimmotions.html
@@ -5,17 +5,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Vim Motions Guide</title>
-	<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+	<script src="https://cdn.tailwindcss.com"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
-<body class="bg-gray-900 text-black font-sans leading-relaxed">
 
-	<header class="bg-blue-800 text-white text-center py-6">
+<body class="bg-cover font-mono leading-relaxed" style="background-image: url(images/main.jpg);">
+
+	<header class="bg-cover bg-conter text-gray-700 text-center py-6"
+		style="background-image: url('images/head.jpg');">
 		<h1 class="text-4xl font-bold">Vim Motions Guide</h1>
 		<p class="text-lg">En guide för att navigera effektivt i Vim och Neovim</p>
 	</header>
+	<iframe src="menu.html" class="w-full h-16 border-1 bg-gray-400 bg-opacity-80"></iframe>
 
-	<main class="container mx-auto my-8 p-6 bg-blue-300 shadow-lg rounded-lg max-w-screen-lg">
+	<main class="container mx-auto my-8 p-6 bg-blue-200 bg-opacity-95 shadow-lg rounded-lg max-w-screen-lg">
 		<h2 class="text-2xl font-semibold mb-4">Vad är Vim Motions?</h2>
 		<p>Vim-motions är rörelser som låter dig snabbt navigera genom text i Vim och Neovim. De är grunden för
 			att använda Vim effektivt och snabbt. Dessa utförs i normal mode!</p><br>
