--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Intro till Neovim</title>
-	<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+	<script src="https://cdn.tailwindcss.com"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
-<body class="bg-black font-sans leading-relaxed">
-	<header class="bg-blue-800 text-white text-center py-6">
+<body class="bg-cover font-mono leading-relaxed" style="background-image: url(images/main.jpg);">
+	<header class="bg-cover text-gray-700 text-center py-6" style="background-image: url('images/head.jpg');">
 		<h1 class="text-4xl font-bold">Intro till Neovim</h1>
 		<p class="text-lg">En snabbstartsguide för att komma igång med Neovim</p>
 	</header>
+	<iframe src="menu.html" class="w-full h-16 border-none bg-gray-400 bg-opacity-80"></iframe>
 
-	<main class="container mx-auto my-8 p-6 bg-blue-300 shadow-lg rounded-lg max-w-screen-md">
+	<main class="container mx-auto my-8 p-6 bg-blue-200 bg-opacity-95 shadow-lg rounded-lg max-w-screen-md">
 		<h2 class="text-2xl font-semibold mb-4">Vad är Neovim?</h2>
 		<p>Neovim är en kraftfull och modern omarbetning av textredigeraren Vim. Det är designat för att vara
 			snabbare och mer anpassningsbart, vilket gör det till ett populärt val för utvecklare.</p>
@@ -34,7 +36,7 @@
 		<p>Du kan installera Neovim via ditt pakethanteringssystem i din terminal.<br>
 			Här är ett exempel för några vanliga system:</p>
 
-		<pre class="bg-gray-800 p-4 rounded-lg text-white overflow-x-auto">
+		<pre class="bg-gray-400 p-4 rounded-lg text-white overflow-x-auto">
 			# För Ubuntu/Debian
 			sudo apt install neovim
 
