--- a/kickstart.html
+++ b/kickstart.html
@@ -8,13 +8,18 @@
 	<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 
-<body class="bg-black font-sans leading-relaxed text-white">
-	<header class="bg-blue-900 text-center py-6">
+
+<body class="bg-cover font-mono leading-relaxed" style="background-image: url(images/main.jpg);">
+
+	<header class="bg-cover bg-conter text-gray-700 text-center py-6"
+		style="background-image: url('images/head.jpg');">
+
 		<h1 class="text-4xl font-bold">Kickstart Guide för Neovim</h1>
 		<p class="text-lg">Lär dig hur du snabbt kommer igång med Neovim Kickstart-konfigurationen.</p>
 	</header>
+	<iframe src="menu.html" class="w-full h-16 border-1 bg-gray-400 bg-opacity-80"></iframe>
 
-	<main class="container mx-auto my-8 p-6 bg-blue-300 text-black shadow-lg rounded-lg">
+	<main class="container mx-auto my-8 p-6 bg-blue-200 bg-opacity-95 text-black shadow-lg rounded-lg">
 		<h2 class="text-2xl font-semibold mb-4">Vad är Kickstart för Neovim?</h2>
 		<p>Kickstart är en enkel och snabb konfigurationsmall för Neovim som hjälper dig att komma igång med en
 			modern utvecklingsmiljö på nolltid. Den använder populära plugins och är lätt att anpassa.</p>
@@ -32,7 +37,7 @@
 
 		<h2 class="text-2xl font-semibold mt-8 mb-4">Hur kommer jag igång?</h2>
 		<p>Följ dessa enkla steg för att installera Kickstart:</p>
-		<pre class="bg-gray-500 p-4 rounded-lg overflow-x-auto text-white">
+		<pre class="bg-gray-400 p-4 rounded-lg overflow-x-auto text-white">
 			Hämta neovim i terminalen med:
 			"git clone https://github.com/nvim-lua/kickstart.nvim.git~/.config/nvim"
 			Alternativt hämta någon av mina configs:
