--- a/modes.html
+++ b/modes.html
@@ -8,13 +8,16 @@
 	<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-900 text-white font-sans leading-relaxed">
-	<header class="bg-blue-800 py-8 text-center">
+
+<body class="bg-cover font-mono leading-relaxed" style="background-image: url(images/main.jpg);">
+	<header class="bg-cover bg-conter text-gray-700 text-center py-6"
+		style="background-image: url('images/head.jpg');">
 		<h1 class="text-4xl font-bold">Vim Modes Guide</h1>
 		<p class="text-lg">En översikt över de olika lägena i Vim och Neovim</p>
 	</header>
+	<iframe src="menu.html" class="w-full h-16 border-1 bg-gray-400 bg-opacity-80"></iframe>
 
-	<main class="container mx-auto my-12 p-6 bg-gray-800 shadow-lg rounded-lg">
+	<main class="container mx-auto my-12 p-6 bg-blue-200 bg-opacity-95 shadow-lg rounded-lg">
 		<section>
 			<h2 class="text-3xl font-semibold mb-4">1. Normal Mode</h2>
 			<p>I Normal Mode navigerar och manipulerar du text utan att skriva direkt.</p>
