--- a/terminal.html
+++ b/terminal.html
@@ -8,13 +8,16 @@
 	<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
 
-<body class="bg-black text-white font-sans leading-relaxed">
-	<header class="bg-blue-900 text-center py-6">
+
+<body class="bg-cover font-mono leading-relaxed" style="background-image: url(images/main.jpg);">
+	<header class="bg-cover bg-conter text-gray-700 text-center py-6"
+		style="background-image: url('images/head.jpg');">
 		<h1 class="text-4xl font-bold">Terminaler - Mina Favoriter</h1>
 		<p class="text-lg">Utforska PowerShell Preview och WezTerm</p>
 	</header>
+	<iframe src="menu.html" class="w-full h-16 border-none bg-gray-400 bg-opacity-80"></iframe>
 
-	<main class="container mx-auto my-8 p-6 bg-gray-800 shadow-lg rounded-lg">
+	<main class="container mx-auto my-8 p-6 bg-blue-200 bg-opacity-95 shadow-lg rounded-lg">
 		<h2 class="text-2xl font-semibold mb-4">Vad är en Terminal?</h2>
 		<p>En terminal är ett verktyg för att interagera med ditt operativsystem via kommandorader. Den är
 			oumbärlig för utvecklare och systemadministratörer.</p>
@@ -45,9 +48,7 @@
 				class="text-blue-400 hover:underline">Min WezTerm config.</a>
 		</section>
 		<br>
-		<section>
-			<a href="index.html">Tillbaka till huvudsidan</a>
-		</section>
+
 	</main>
 
 	<footer class="text-center py-4 text-gray-500">
