--- a/vimmotions.html
+++ b/vimmotions.html
@@ -23,6 +23,8 @@
 		<h2 class="text-2xl font-semibold mb-4">Vad är Vim Motions?</h2>
 		<p>Vim-motions är rörelser som låter dig snabbt navigera genom text i Vim och Neovim. De är grunden för
 			att använda Vim effektivt och snabbt. Dessa utförs i normal mode!</p><br>
+		<p>All keybinds går att ändra och mappa precis hur man vill. För en mer komplett guide: <a
+				href="https://vim.rtorr.com/">Vim Cheat Sheet</a></p>
 		<p class="text-lg">För att förstå modes <a href="modes.html"
 				class="text-blue-400 hover:underline">klicka här!</a>
 
@@ -57,8 +59,6 @@
 			<li><code>Ctrl-i</code>: Hoppa framåt i historiken av rörelser</li>
 		</ul>
 		<br>
-		<a href="index.html">Tillbaka till huvudsidan.</a>
-
 	</main>
 
 	<footer class="bg-gray-900 text-center py-4 text-gray-400">
