--- a/vimmotions.html
+++ b/vimmotions.html
@@ -24,7 +24,8 @@
 		<p>Vim-motions är rörelser som låter dig snabbt navigera genom text i Vim och Neovim. De är grunden för
 			att använda Vim effektivt och snabbt. Dessa utförs i normal mode!</p><br>
 		<p>All keybinds går att ändra och mappa precis hur man vill. För en mer komplett guide: <a
-				href="https://vim.rtorr.com/">Vim Cheat Sheet</a></p>
+				href="https://vim.rtorr.com/" class="text-blue-400 hover:underline">Vim Cheat Sheet</a>
+		</p>
 		<p class="text-lg">För att förstå modes <a href="modes.html"
 				class="text-blue-400 hover:underline">klicka här!</a>
 
