--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		<h1 class="text-4xl font-bold">Intro till Neovim</h1>
 		<p class="text-lg">En snabbstartsguide för att komma igång med Neovim</p>
 	</header>
-	<iframe src="menu.html" class="w-full h-16 border-none bg-gray-400 bg-opacity-80"></iframe>
+
+	<iframe src="menu.html"
+		class="w-full min-h-[50px] h-auto sm:h-16 border-none bg-gray-400 bg-opacity-80"></iframe>
 
 	<main class="container mx-auto my-8 p-6 bg-blue-200 bg-opacity-95 shadow-lg rounded-lg max-w-screen-md">
 		<h2 class="text-2xl font-semibold mb-4">Vad är Neovim?</h2>
