--- a/menu.html
+++ b/menu.html
@@ -7,16 +7,49 @@
 	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-	<nav class="text-white p-4 shadow-lg">
-		<ul class="flex justify-center space-x-6">
-			<li><a href="index.html" target="_parent" class="hover:underline">Hem</a></li>
-			<li><a href="kickstart.html" target="_parent" class="hover:underline">Konfigurationer</a></li>
-			<li><a href="modes.html" target="_parent" class="hover:underline">Vim-modes</a></li>
-			<li><a href="terminal.html" target="_parent" class="hover:underline">Terminaler</a></li>
-			<li><a href="vimmotions.html" target="_parent" class="hover:underline">Vim-motions</a></li>
+<body class="bg-gray-100">
+
+	<nav class="bg-gray-800 text-white p-4 shadow-lg">
+		<div class="max-w-5xl mx-auto flex justify-between items-center">
+			<a href="index.html" class="text-xl font-bold">Min Sida</a>
+
+			<button id="menu-btn" class="sm:hidden text-white focus:outline-none">
+				☰
+			</button>
+
+			<ul id="menu" class="hidden sm:flex space-x-6">
+				<li><a href="index.html" target="_parent" class="hover:underline">Hem</a></li>
+				<li><a href="kickstart.html" target="_parent"
+						class="hover:underline">Konfigurationer</a></li>
+				<li><a href="modes.html" target="_parent" class="hover:underline">Vim-modes</a></li>
+				<li><a href="terminal.html" target="_parent" class="hover:underline">Terminaler</a></li>
+				<li><a href="vimmotions.html" target="_parent" class="hover:underline">Vim-motions</a>
+				</li>
+			</ul>
+		</div>
+
+		<ul id="mobile-menu" class="hidden flex-col space-y-2 p-4 sm:hidden bg-gray-700">
+			<li><a href="index.html" target="_parent" class="block py-2 hover:bg-gray-600">Hem</a></li>
+			<li><a href="kickstart.html" target="_parent"
+					class="block py-2 hover:bg-gray-600">Konfigurationer</a></li>
+			<li><a href="modes.html" target="_parent" class="block py-2 hover:bg-gray-600">Vim-modes</a>
+			</li>
+			<li><a href="terminal.html" target="_parent" class="block py-2 hover:bg-gray-600">Terminaler</a>
+			</li>
+			<li><a href="vimmotions.html" target="_parent"
+					class="block py-2 hover:bg-gray-600">Vim-motions</a></li>
 		</ul>
 	</nav>
+
+	<script>
+		const menuBtn = document.getElementById("menu-btn");
+		const mobileMenu = document.getElementById("mobile-menu");
+
+		menuBtn.addEventListener("click", () => {
+			mobileMenu.classList.toggle("hidden");
+		});
+	</script>
+
 </body>
 
 </html>
