--- a/menu.html
+++ b/menu.html
@@ -12,11 +12,11 @@
 	<nav class="bg-gray-800 text-white p-4 shadow-lg">
 		<div class="max-w-5xl mx-auto flex justify-between items-center">
 
-			<button id="menu-btn" class="sm:hidden text-white focus:outline-none">
-				☰
+			<button id="menu-btn" class="text-white text-2xl sm:hidden focus:outline-none">
+				&#9776;
 			</button>
 
-			<ul id="menu" class="hidden sm:flex space-x-6">
+			<ul class="hidden sm:flex space-x-6">
 				<li><a href="index.html" target="_parent" class="hover:underline">Hem</a></li>
 				<li><a href="kickstart.html" target="_parent"
 						class="hover:underline">Konfigurationer</a></li>
@@ -27,7 +27,7 @@
 			</ul>
 		</div>
 
-		<ul id="mobile-menu" class="hidden flex-col space-y-2 p-4 sm:hidden bg-gray-700">
+		<ul id="mobile-menu" class="hidden flex-col space-y-2 p-4 bg-gray-700 sm:hidden">
 			<li><a href="index.html" target="_parent" class="block py-2 hover:bg-gray-600">Hem</a></li>
 			<li><a href="kickstart.html" target="_parent"
 					class="block py-2 hover:bg-gray-600">Konfigurationer</a></li>
