--- a/index.html
+++ b/index.html
@@ -80,16 +80,21 @@
 		<p>Du kan installera Neovim via ditt pakethanteringssystem i din terminal.<br>
 			Här är ett exempel för några vanliga system:</p>
 
-		<pre class="bg-gradient-to-t from-[#5f2c82] to-[#49a09d] p-4 rounded-lg text-white overflow-x-auto">
-			# För Ubuntu/Debian
-			sudo apt install neovim
 
-			# För macOS
-			brew install neovim
 
-			# För Windows (med Scoop)
-			scoop install neovim
-		</pre>
+		<div
+			class="bg-gradient-to-t from-[#5f2c82] to-[#49a09d] p-2 sm:p-4 rounded-lg text-white text-sm sm:text-base font-mono">
+			<span class="text-gray-300">För Ubuntu/Debian</span><br>
+			<span class="font-bold">sudo apt install neovim</span><br><br>
+
+			<span class="text-gray-300">För macOS</span><br>
+			<span class="font-bold">brew install neovim</span><br><br>
+
+			<span class="text-gray-300">För Windows (med Scoop)</span><br>
+			<span class="font-bold">scoop install neovim</span>
+		</div>
+
+
 
 
 	</main>
