--- a/kickstart.html
+++ b/kickstart.html
@@ -79,19 +79,27 @@
 		<p>Följ dessa enkla steg för att installera Kickstart:</p>
 
 
-		<pre
-			class="bg-gradient-to-t from-[#5f2c82] to-[#49a09d] p-2 sm:p-4 rounded-lg text-white overflow-x-auto max-w-full text-left">
-			Hämta neovim i terminalen med "git clone"
+
+
+		<div
+			class="bg-gradient-to-t from-[#5f2c82] to-[#49a09d] p-2 sm:p-4 rounded-lg text-white text-sm sm:text-base font-mono">
+			Hämta neovim i terminalen med <span class="font-bold">"git clone"</span><br>
 			Kickstart:
 			<a class="text-blue-400 font-bold hover:underline"
-				href="https://github.com/nvim-lua/kickstart.nvim">Neovim-Kickstart</a>
-			Alternativt hämta någon av mina configs:
+				href="https://github.com/nvim-lua/kickstart.nvim">
+				Neovim-Kickstart
+			</a>
+			<br>Alternativt hämta någon av mina configs:<br>
 			<a class="text-blue-400 font-bold hover:underline"
-				href="https://github.com/JojoSlice/KickstartNvim.git">Jojos-Kickstart</a>
-			<a class="text-blue-400 font-bold hover:underline"
-				href="https://github.com/JojoSlice/nvim.git">Jojos-LazyVim</a>
-			Starta sedan neovim genom att skriva "nvim ."
-		</pre>
+				href="https://github.com/JojoSlice/KickstartNvim.git">
+				Jojos-Kickstart
+			</a><br>
+			<a class="text-blue-400 font-bold hover:underline" href="https://github.com/JojoSlice/nvim.git">
+				Jojos-LazyVim
+			</a>
+			<br>Starta sedan neovim genom att skriva <span class="font-bold">"nvim ."</span>
+		</div>
+
 
 		<br>
 		<p>Efter att du startat Neovim kan du följa instruktionerna på skärmen för att installera plugins och
